--- a/config.cfg
+++ b/config.cfg
@@ -1,9 +1,9 @@
 {
-    "Host":"127.0.0.1:20067",
+    "Host":"192.168.1.101:20066",
     "Name":"Nzlov VR FileServer",
     "FilePath":[
         {
-            "Path":"/Volumes/sys/御姐很哀伤 全套10G视频加图片",
+            "Path":"/Volumes/sys/御姐很哀伤",
             "Sub":false
         }
     ]
