--- a/config.cfg
+++ b/config.cfg
@@ -2,7 +2,7 @@
     "Name":"Nzlov VR FileServer",
     "FilePath":[
         {
-            "Path":"/Volumes/sys/御姐很哀伤",
+            "Path":"/Volumes/sys/",
             "Sub":false
         }
     ]
